--- a/public/stylesheets/Styles.css
+++ b/public/stylesheets/Styles.css
@@ -79,3 +79,11 @@ table,td,th {
 h1 {
 	border-bottom: 2px solid white;
 }
+
+
+.regform input {
+	display: block;
+	height: 37px;
+	border-radius: 5px;
+	margin-bottom: 5px;
+}
