--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
-<form action="/register" method="POST">
+<form class="regform" action="/register" method="POST">
     <h2>REGISTER</h2>
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
-    <button class="btn  btn-primary">register</button>
+    <button class="btn  btn-primary btn-block">register</button>
 </form>
 <%- include('partials/footer'); -%>
