--- a/views/allstudents.ejs
+++ b/views/allstudents.ejs
@@ -41,8 +41,10 @@
                     <th scope="col">M4</th>
                     <th scope="col">M5</th>
                     <th scope="col">M6</th>
+                    <%if(currentUser && currentUser.isAdmin) { %>
                     <th class="actbutton" scope="col"></th>
                     <th class="actbutton" scope="col"></th>
+                    <% } %>
                 </tr>
             </thead>
             <tbody>
@@ -66,6 +68,10 @@
                     <td scope="row"><%= allstudent.M5 %></td>
                     <td scope="row"><%= allstudent.M6 %></td>
                     <div class="button">
+
+                        <%if(currentUser && currentUser.isAdmin) { %>
+
+
                         <td class="actbutton">
                             <form class="formbutton" action="/allstudents/<%= allstudent.id %>/edit" method="GET">
                                 <button class="btn  btn-warning">Edit</button>
@@ -80,6 +86,7 @@
 
                         </td>
                     </div>
+                    <% } %>
 
                 </tr>
                 <% }); %>
