--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,6 +3,8 @@
     <h2>REGISTER</h2>
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
+    <input type="password" name="admincode" placeholder="admin code">
+
     <button class="btn  btn-primary btn-block">register</button>
 </form>
 <%- include('partials/footer'); -%>
