--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -65,8 +65,8 @@
 
 
         <div class="container">
-            <div class="tablemod">
-                <table id="studentprofile" class="table">
+            <div class="table-responsive">
+                <table id="studentprofile" class="table .w-auto">
 
                     <thead class="thead-dark">
                         <tr>
