--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,8 +10,8 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <button type="submit" class="btn  btn-primary">Login</button>
-    <a href="/register" class="btn btn-info">Register</a>
+    <button type="submit" class="btn  btn-primary btn-block">Login </button>
+    <a href="/register" class="btn btn-info btn-block">Register</a>
 </form>
 
 <%- include('partials/footer'); -%>
