--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -65,10 +65,15 @@
 
 
         <div class="container">
+
             <div class="table-responsive">
+                <p class="profilealign"><a id="tran" class="btn btn-primary btn-sm " href="#">Change
+                        alignment</a>
+                </p>
                 <table id="studentprofile" class="table .w-auto">
 
                     <thead class="thead-dark">
+
                         <tr>
                             <!-- <th scope="col">NUM</th> -->
                             <th scope="col">NAME</th>
@@ -84,8 +89,8 @@
                             <th scope="col">M4</th>
                             <th scope="col">M5</th>
                             <th scope="col">M6</th>
-                            <th class="actbutton" scope="col"></th>
-                            <th class="actbutton" scope="col"></th>
+                            <th class="actbutton" scope="col">Download</th>
+                            <th class="actbutton" scope="col">Download</th>
                         </tr>
                     </thead>
                     <tbody>
