--- a/public/stylesheets/Styles.css
+++ b/public/stylesheets/Styles.css
@@ -112,6 +112,27 @@ h1 {
 	text-align: center;
 }
 
+.downloadall,.addnew {
+	text-align: center;
+	margin-bottom: 10px;
+
+}
+
+th {
+	color: white;
+	background-color: #343a40;
+	border: 1px solid black !important;
+	
+}
+
+.profilealign{
+	position:relative;
+	top:90px;
+	
+}
+
+
+
 
 @media(min-width:800px) {
 	
@@ -120,6 +141,4 @@ h1 {
 		}
 	
 }
-
-
 
